--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches: [ master ,'**']
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -25,5 +25,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          sudo apt-get update && sudo apt-get install clang-10 libc++abi-10-dev libc++-10-dev
+          sudo apt-get update && sudo apt-get install clang-10 libc++abi-10-dev libc++-10-dev 
+          sudo apt-get install libboost-dev   libboost-system-dev # for test
           make -C test test
